stylesheets/navobile.css
.navobile-mobile-only {
    display: none;
}

#navobile-device-pixel {
  width: 0;
}

@media screen and (min-width: 0px) and (max-width: 765px) {
    html,
    .navobile-bound {
      overflow-x: hidden;
      overflow-y: scroll;
      height: 100%;
      width: 100%;
    }

    .no-overflowscrolling {
      height: auto;
    }

    .no-overflowscrolling .navobile-bound {
      height: auto;
    }

    .overflowscrolling {
      -webkit-overflow-scrolling: touch;
    }

    #navobile-device-pixel {
      width: 1px;
    }

    .navobile-mobile-only {
      display: block;
    }

    .navobile-desktop-only {
      display: none;
    }

    .navobile-navigation {
      height: 100%;
      left: -100%;
      overflow: auto;
      position: absolute;
      top: -100%;
      width: 80%;
      z-index: -1;
    }

    .navobile-bound .navobile-navigation {
        left: 0;
        position: fixed;
        top: 0;
        z-index: 1;
    }

    .navobile-navigation ul {
      overflow: hidden;
    }

    .navobile-navigation li {
      float: none;
      overflow: hidden;
    }

    .navobile-content {
      position: relative;
      z-index: 3;

      -webkit-transition: -webkit-transform 0.2s linear;
      -moz-transition: -moz-transform 0.2s linear;
      -o-transition: -ms-transform 0.2s linear;
      -ms-transition: -o-transform 0.2s linear;
      transition: transform 0.2s linear;
    }

    .csstransforms #content.navobile-content-hidden {
      -webkit-transform: translateX(80%);
      -moz-transform: translateX(80%);
      -ms-transform: translateX(80%);
      -o-transform: translateX(80%);
      transform: translateX(80%);
    }

    .csstransforms #content.navobile-content-hidden {
      -webkit-transform: translate3d(80%,0,0);
      -moz-transform: translate3d(80%,0,0);
      -ms-transform: translate3d(80%,0,0);
      -o-transform: translate3d(80%,0,0);
      transform: translate3d(80%,0,0);
    }
}

